<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dmain.gymfit.Activity_New_Exercise">
    <android.support.design.widget.AppBarLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="Dodaj Ćwiczenie" />

    </android.support.design.widget.AppBarLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_above="@+id/txtinput"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-108dp"
        android:text="@string/kg"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtinput"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:inputType="number"
        android:text="@string/wartość_obciążenia"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="177dp"
        android:text="Ilość powtórzeń"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtinput2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:inputType="number"
        android:text="@string/wartość_obciążenia"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtinput2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/dodaj" />

    <ListView
        android:id="@+id/listv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btadd"
        android:layout_marginTop="12dp"
        android:addStatesFromChildren="false">
        android:textSize="20dp"</ListView>

    <Button
        android:id="@+id/IncreaseWeight"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtinput"
        android:layout_toEndOf="@+id/btadd"
        android:elevation="0dp"
        android:onClick="increaseWeight"
        android:text="+" />

    <Button
        android:id="@+id/DecreaseWeight"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtinput"
        android:layout_alignStart="@+id/textView"
        android:onClick="decreaseWeight"
        android:text="-" />

    <Button
        android:id="@+id/IncreaseReps"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtinput2"
        android:layout_alignEnd="@+id/textView"
        android:onClick="increaseReps"
        android:text="+" />

    <Button
        android:id="@+id/DecreaseReps"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtinput2"
        android:layout_alignStart="@+id/textView"
        android:onClick="decreaseReps"
        android:text="-" />



</RelativeLayout>





